--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 
   <section id="home" class="hero">
-    <img src="images/Cube-1.png" alt="Cube Shape" class="hero-cube">
+    <img src="/images/Cube-1.png" alt="Cube Shape" class="hero-cube">
     <div class="container">
       <div class="hero-content">
         <h1 class="hero-title">Educate: Wadah Generasi Muda Menggapai Cita Mulia</h1>
@@ -57,7 +57,7 @@
         <a href="#contact" class="btn btn-kontak">Daftar</a>
       </div>
       <div class="hero-image">
-        <img src="images/hero-aset.webp" alt="Educate Hero Illustration" loading="lazy"
+        <img src="/images/hero-aset.webp" alt="Educate Hero Illustration" loading="lazy"
           style="width: 380px; max-width: 100%; background: none; box-shadow: none;">
       </div>
     </div>
