--- a/lolos-ptn-favorit/index.html
+++ b/lolos-ptn-favorit/index.html
@@ -8,7 +8,7 @@
         content="Educate - Wadah Generasi Muda Menggapai Cita Mulia. Lembaga bimbingan belajar terbaik di Indonesia untuk persiapan masuk PTN, kedokteran, dan SMA favorit.">
     <meta name="keywords" content="bimbel, les privat, persiapan PTN, kedokteran, SIMAK UI, Educate">
     <meta name="author" content="Educate">
-    <title>Bimbel Spesialis Kedokteran - Educate</title>
+    <title>Bimbel Lolos PTN Terbaik Bergaransi - Educate</title>
 
     <!-- ✅ LOGO TAB (Favicon & App Icons) -->
     <!-- Favicon standar -->
